<resources>
    <string name="delete">Delete</string>
    <string name="document_name">Document name</string>
    <string name="barcode">Barcode</string>
    <string name="add">Add</string>
    <string name="warning">Warning</string>
    <string name="error_reading_pdf">Error while reading the PDF. Try another file or file location</string>
    <string name="dialog_password_protection_title">Decrypt password protected PDF</string>
    <string name="dialog_password_protection_hint">Enter password</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_delete_confirmation_message">Do you really want to delete the document from the app?</string>
    <string name="require_authentication">Require authentication</string>
    <string name="settings">Settings</string>
    <string name="authenticate">Authenticate</string>
    <string name="report_issue_summary">Any problem using the app? Let us try to help you</string>
    <string name="report_issue">Report issue</string>
    <string name="rate_summary">If you like this app, please consider rating it</string>
    <string name="rate">Rate this app</string>
    <string name="help_translating">Help localizing</string>
    <string name="help_translating_summary">Translate the app into your native language</string>
    <string name="contributing">Help coding</string>
    <string name="contributing_summary">This app is open-source. Contribute code!</string>
    <string name="more">More</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="preference_max_brightness">100\u0025 brightness</string>
    <string name="preference_max_brightness_description">Always display the app with full screen brightness.</string>
    <string name="licenses">Licenses</string>
    <string name="licenses_summary">Display the open-source licenses used in this project</string>
    <string name="version">Version %1$s</string>
    <string name="share">Share</string>
    <string name="changelog">Changelog</string>
    <string name="changelog_summary">Changes in this app version</string>
    <string name="delete_all">Delete all</string>
    <string name="dialog_delete_all_confirmation_message">Do you really want to delete all documents from the app?</string>
    <string name="dialog_warning_title">Warning!</string>
    <string name="dialog_warning_description">The app is currently configured to be shown on top of the lock screen. That means your documents can potentially be accessed without unlocking your phone. Go to settings to change this.</string>
    <string name="lock">Lock</string>
    <string name="export_all">Export all</string>
    <string name="preference_add_documents_front">Add documents in front</string>
    <string name="preference_add_documents_front_description">New PDFs are inserted in the front instead of the back.</string>
    <string name="preference_add_show_on_locked_screen">Show over lock screen</string>
    <string name="preference_add_show_on_locked_screen_description">Allows to access the app without unlocking your phone. Don\'t use this setting permanently.</string>
    <string name="scroll_to_first">Scroll to first PDF</string>
    <string name="scroll_to_last">Scroll to last PDF</string>
    <string name="pdfs">PDFs</string>
    <string name="search">Search</string>
    <string name="search_query_hint">Document name</string>
    <string name="dialog_document_name_title">Change document name</string>
    <string name="dialog_document_order_title">Change document order</string>
    <string name="change_order">Change order</string>
    <string name="export_filtered">Export currently filtered</string>
    <string name="delete_filtered">Delete currently filtered</string>
    <string name="switch_layout">Switch layout</string>
    <string name="preference_show_list_layout">Show PDFs in list layout</string>
    <string name="preference_show_list_layout_description">Alternative layout in which instead of showing the PDF right away, only the PDF titles are shown in a list.</string>
    <!--suppress MissingQuantity -->
    <plurals name="dialog_delete_filtered_confirmation_text">
        <item quantity="one">Do you really want to delete %d document from the app?</item>
        <item quantity="other">Do you really want to delete %d documents from the app?</item>
    </plurals>
    <string name="preference_barcode">Extract barcodes</string>
    <string name="preference_barcode_disabled">Disabled</string>
    <string name="preference_barcode_regular">Regular intensity</string>
    <string name="preference_barcode_extended">Extended (best possible detection)</string>
    <string name="preference_prevent_screenshots">Prevent screenshots</string>
    <string name="preference_prevent_screenshots_description">Screenshots are never allowed, in case you enabled authentication. This has security reasons.</string>
</resources>
