<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/search"
        android:title="@string/search"
        android:icon="@drawable/search_24"
        app:showAsAction="collapseActionView|always"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />
    <item
        android:id="@+id/add"
        android:icon="@drawable/baseline_add_24"
        android:title="@string/add"
        android:visible="false"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/openSettings"
        android:title="@string/settings"
        android:visible="false"
        app:showAsAction="never"/>

    <item
        android:id="@+id/openMore"
        android:title="@string/more"
        app:showAsAction="never"/>

    <item
        android:id="@+id/deleteAll"
        android:title="@string/delete_all"
        android:visible="false"
        app:showAsAction="never"/>

    <item
        android:id="@+id/export_all"
        android:title="@string/export_all"
        android:visible="false"
        app:showAsAction="never"/>

    <item
        android:id="@+id/scrollToFirst"
        android:title="@string/scroll_to_first"
        android:visible="false"
        app:showAsAction="never"/>

    <item
        android:id="@+id/scrollToLast"
        android:title="@string/scroll_to_last"
        android:visible="false"
        app:showAsAction="never"/>

    <item
        android:id="@+id/lock"
        android:title="@string/lock"
        android:visible="false"
        app:showAsAction="never"/>
</menu>